# business_card

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml  discord_notifications.yml
config/: settings.py  urls.py  v1_urls.py
core/: constants.py  middleware.py
core/domain/: errors.py
core/domain/storage/: paths.py  ports.py  storage.py
core/schemas/: base.py  card.py
core/services/: drf_exception_handler.py
django_app/: apps.py
django_app/card/: apps.py
django_app/card/infra/: r2_adapter.py
django_app/card/migrations/: 0001_initial.py  0002_initial.py
django_app/card/models/: __init__.py  card.py  card_event.py  card_img.py  card_share.py  card_snapshot.py  user_collection.py
django_app/card/permissions/: card_permission.py  share_permission.py
django_app/card/serializers/: card_serializer.py  card_share_serializer.py  card_snapshot_serializer.py  collection_serializer.py  media_serializer.py  share_serializer.py
django_app/card/services/: card_service.py  collection_service.py  media_service.py  share_service.py
django_app/card/urls/: url.py  v1.py
django_app/card/views/: card_view.py  collection_view.py  media_view.py  share_view.py
django_app/infra/: r2_adapter.py
django_app/models/: card.py  card_event.py  card_img.py  card_share.py  card_snapshot.py
django_app/serializers/: card_serializer.py  card_share_serializer.py  card_snapshot_serializer.py
django_app/services/: service.py
django_app/signals/: card_signal.py  post_save_signal.py
django_app/user/: apps.py
django_app/user/migrations/: 0001_initial.py
django_app/user/models/: __init__.py  user.py  user_auth.py
django_app/user/permissions/: auth_permission.py
django_app/user/serializers/: user_serializer.py
django_app/user/services/: auth_service.py
django_app/user/urls/: auth.py  user.py
django_app/user/views/: user_view.py
django_app/views/: card_view.py  media_view.py  share_view.py
